# nagios_check_site_content

./: .gitignore  Cargo.toml  README.md
src/: install_as_nagios_plugin.sh  main.rs
src/examples/: check_elastic.sh  check_elasticsearch.sh  check_kibana.sh
