[package]
name = "check_site"
version = "0.3.0"
edition = "2021"
authors = ["James Koonts","James@Koonts.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
auth-headers = "0.1.0"
http = "0.2.8"
http-auth-basic = "0.3.3"
